--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/inboxdb?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = MyNewPass
+#spring.datasource.url = jdbc:mysql://localhost:3306/inboxdb?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = MyNewPass
 
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.springframework.web: DEBUG
+
+#todo: need to put proper properties below
+auth0.issuer:https://bk-samples.auth0.com/
+auth0.apiAudience:https://contacts.mycompany.com/
